--- a/PMI_test_1125.Rmd
+++ b/PMI_test_1125.Rmd
@@ -1,9 +1,3 @@
----
-title: "Untitled"
-author: "Zhiwei Xu"
-date: "2021/11/24"
-output: html_document
----
 
 ```{r}
 ########## PMI testing function ############
@@ -138,10 +132,10 @@ for(y in 1:200){
     }
   }
 }
-t/200
-s/200
-t2/200
-s2/200
+t/200      #type I error
+s/200      #type II error
+t2/200     #type I error 
+s2/200     #type II error
 ```
 
 
